--- a/jpapp_test.html
+++ b/jpapp_test.html
@@ -20,7 +20,7 @@
             }
             
             if (/iPad|iPhone|iPod/i.test(userAgent)) {
-                return "iOS";
+                return "iPhone";
             }
             
             return "Unknown";
@@ -37,7 +37,7 @@
                 case "MacOS":
                     window.location.href = "https://www.post.japanpost.jp/apps/";
                     break;
-                case "iOS":
+                case "iPhone":
                     window.location.href = "https://apps.apple.com/jp/app/%E6%97%A5%E6%9C%AC%E9%83%B5%E4%BE%BF/id487103277";
                     break;
                 case "Android":
