--- a/jpapp_test.html
+++ b/jpapp_test.html
@@ -20,7 +20,7 @@
             }
             
             if (/iPad|iPhone|iPod/i.test(userAgent)) {
-                return "iPhone";
+                return "iOS";
             }
             
             return "Unknown";
@@ -35,9 +35,9 @@
                     window.location.href = "https://www.post.japanpost.jp/apps/";
                     break;
                 case "MacOS":
-                    window.location.href = "https://www.post.japanpost.jp/apps/";
+                    window.location.href = "https://www.apple.com/jp/";
                     break;
-                case "iPhone":
+                case "iOS":
                     window.location.href = "https://apps.apple.com/jp/app/%E6%97%A5%E6%9C%AC%E9%83%B5%E4%BE%BF/id487103277";
                     break;
                 case "Android":
