--- a/jpapp_test.html
+++ b/jpapp_test.html
@@ -38,7 +38,7 @@
                     window.location.href = "https://www.apple.com/jp/";
                     break;
                 case "iOS":
-                    window.location.href = "https://apps.apple.com/jp/app/%E6%97%A5%E6%9C%AC%E9%83%B5%E4%BE%BF/id487103277";
+                    window.location.href = "https://www.yahoo.co.jp/";
                     break;
                 case "Android":
                     window.location.href = "https://play.google.com/store/apps/details?id=jp.japanpost.post.postbox.android";
