--- a/jpapp_test.html
+++ b/jpapp_test.html
@@ -32,10 +32,10 @@
             
             switch (os) {
                 case "Windows":
-                    window.location.href = "https://www.post.japanpost.jp/apps/";
+                    window.location.href = "https://apps.apple.com/jp/app/%E6%97%A5%E6%9C%AC%E9%83%B5%E4%BE%BF/id487103277";
                     break;
                 case "MacOS":
-                    window.location.href = "https://www.apple.com/jp/";
+                    window.location.href = "https://apps.apple.com/jp/app/%E6%97%A5%E6%9C%AC%E9%83%B5%E4%BE%BF/id487103277";
                     break;
                 case "iOS":
                     window.location.href = "https://apps.apple.com/jp/app/%E6%97%A5%E6%9C%AC%E9%83%B5%E4%BE%BF/id487103277";
