--- a/jpapp_test.html
+++ b/jpapp_test.html
@@ -49,6 +49,16 @@
             }
         }
     </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7GF0LH56DS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7GF0LH56DS');
+</script>
+
 </head>
 <body onload="redirectToOSLink()">
     <!-- ページのコンテンツはここに記述 -->
